Archive2/e6/6f997672b2db98/output
main.cpp: In function 'int main()':
main.cpp:4:9: error: expected primary-expression before 'int'
     if((int i = 7))
         ^
main.cpp:4:9: error: expected ')' before 'int'
main.cpp:8:1: error: expected ')' before '}' token
 }
 ^
main.cpp:8:1: error: expected primary-expression before '}' token
main.cpp:8:1: error: expected ';' before '}' token
